--- a/src/assets/dashboard.html
+++ b/src/assets/dashboard.html
@@ -13,7 +13,7 @@
     <div class="db">
 
       <div class="db__header">
-        <h1>Excel Dashboard</h1>
+        <h1>Excel Dashboard!!!</h1>
       </div>
 
       <div class="db__new">
